--- a/resume.html
+++ b/resume.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<title>Resume</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.css">
+<script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
+<style>  
+  body { font-family:Verdana,sans-serif; line-height:1.5; margin:auto; max-width:1024px; display:none}
+  h1  { font-size:200%; background:#f0f0f0; padding:12px }
+  h2  { border-bottom:1px solid grey; padding:6px; }
+</style>
+<body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
+
 <span style="float:right;padding:6px">someone@gmail.com<br>mobile: +852 98765432</span>
 
 # Casualwriter  
