--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,6 @@
   h2  { border-bottom:1px solid grey; padding:6px; }
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
-
 <span style="float:right;padding:6px">someone@gmail.com<br>mobile: +852 98765432</span>
 
 # Casualwriter  
@@ -62,5 +61,5 @@
 
 * Birth: yyyy/mm
 * Gender: Male
-* Address: room 01, 2/F, block C, somewhere building, Hong Kong
-* Interests: hiking, reading
+* Address: Room 305, 3/F, Block A, One building, Kowloon
+* Interests: Hiking, Reading
