--- a/resume.html
+++ b/resume.html
@@ -51,7 +51,7 @@
 * [powerpage](https://github.com/casualwriter/powerpage) - a lightweight web browser for html/js/css application development
 * [casualwriter](http://www.geocities.ws/ck4hung) - a document utility for powerbuilder
 
-## Language
+## Languages
 
 * English - good
 * Cantonese - fluent
