--- a/resume-blue.html
+++ b/resume-blue.html
@@ -5,8 +5,8 @@
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
   body { font-family:Arial; line-height:1.5; margin:auto; max-width:1024px; display:none; color:#232 }
-  h1  { font-size:220%; background:RoyalBlue; color:white; padding:12px }
-  h2  { border-bottom:1px solid grey; padding:6px; color:teal}  
+  h1  { font-size:220%; padding:12px; border:1px solid lightgrey; background:RoyalBlue; color:white  }
+  h2  { border-bottom:1px solid grey; padding:6px; color:teal }  
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
 <span style="float:right;padding:6px;color:#eee">someone@gmail.com<br>mobile: +852 98765432</span>
