--- a/resume-dark.html
+++ b/resume-dark.html
@@ -5,7 +5,7 @@
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
   body { font-family:Verdana,sans-serif; line-height:1.5; margin:auto; max-width:1024px; display:none; background:#222; color:#fff }
-  h1  { font-size:200%; background:#666; padding:12px }
+  h1  { font-size:200%; padding:12px; border:1px solid grey; background:#666; }
   h2  { border-bottom:1px solid grey; padding:6px; }  
   a  { color: white }
 </style>
