--- a/resume-warm.html
+++ b/resume-warm.html
@@ -5,7 +5,7 @@
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
   body { font-family:Calibri,Arial; line-height:1.5; margin:auto; max-width:1024px; display:none; color:#232 }
-  h1  { font-size:220%; background:#a05; color:white; padding:12px }
+  h1  { font-size:220%; padding:12px; border:1px solid lightgrey; background:#a05; color:white }
   h2  { border-bottom:1px solid grey; padding:6px; color:purple}  
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
