--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
   body { font-family:Verdana,sans-serif; line-height:1.5; margin:auto; max-width:1024px; display:none}
-  h1  { font-size:200%; background:#f0f0f0; padding:12px }
+  h1  { font-size:200%; padding:12px; border:1px solid lightgrey; background:#f0f0f0;  }
   h2  { border-bottom:1px solid grey; padding:6px; }
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
