--- a/project-plan.html
+++ b/project-plan.html
@@ -15,11 +15,11 @@
 
 develop an inventory system for xxx company 
 
-## Infranstructure 
+## Infrastructure 
 
 * server - VM, 2 core, 12G RAM
 * tomcat, java 1.8, vue.js
-* dtabase: mysql
+* database: mysql
 
 ## Human Resources
 
