--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,7 @@
   h2  { border-bottom:1px solid grey; padding:6px; }
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
+
 <span style="float:right;padding:6px">someone@gmail.com<br>mobile: +852 98765432</span>
 
 # Casualwriter  
@@ -23,31 +24,31 @@
 * 15 years experience in IT development and operation
 * 10 years project/team management experience
 * Database: Oracle, MySQL, MS SQL, etc..
-* JavaScript, Java, JSP, PowerBuilder, Node.js, .NET
+* JavaScript, Java, PHP, PowerBuilder, Node.js
 
 ## Working Experience
 
 #### (2015/08 - present) PingShan Technology Company Ltd.
 
 * IT Manager
-* Lead team (5-8 members) for IT development and operation
-* Project: [Casual-markdown](https://github.com/casualwriter/casual-markdown), [Casual-markdown-cv](https://github.com/casualwriter/casual-markdown-cv)
+* Manage team (5-8 members) for IT development and operation
+* Projects: [Casual-markdown](https://github.com/casualwriter/casual-markdown), [Casual-markdown-cv](https://github.com/casualwriter/casual-markdown-cv)
 
 #### (2011/06 - 2015/07) Second Company
 
 * Senior System Analyst
-* Leading a small team (2-5 members) for application development
+* Lead a small team (2-5 members) for application development
 * Products: [Powerpage](https://github.com/casualwriter/powerpage), [Power-Web-Crawler](https://github.com/casualwriter/powerpage-web-crawler)
 
 #### (2005/01 - 2011/05) My first Company
 
 * Analyst Programmer -> System Analyst
-* Tech-Stack: javascript, java, PHP, powerbuilder, oracle, sybase
+* Tech-Stack: javascript, java, PHP, powerbuilder, oracle
 * Projects: Clincial Management System, Teamwork Desktop
 
 ## Products (or Awards)
 
-* [casual-markdown](https://github.com/casualwriter/casual-markdown) - a lighteight markdown parser
+* [casual-markdown](https://github.com/casualwriter/casual-markdown) - a lightweight markdown parser
 * [powerpage](https://github.com/casualwriter/powerpage) - a lightweight web browser for html/js/css application development
 * [casualwriter](http://www.geocities.ws/ck4hung) - a document utility for powerbuilder
 
@@ -55,11 +56,11 @@
 
 * English - good
 * Cantonese - fluent
-* Mandarin - native/fluent
+* Mandarin - fluent
 
 ## Personal Info (optional)
 
 * Birth: yyyy/mm
 * Gender: Male
-* Address: Room 305, 3/F, Block A, One building, Kowloon
+* Address: Room 305, 3/F, Block A, One building, Hong Kong
 * Interests: Hiking, Reading
