--- a/resume-blue.html
+++ b/resume-blue.html
@@ -10,7 +10,7 @@
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
 
-<span style="float:right;padding:6px">someone@gmail.com<br>mobile: +852 98765432</span>
+<span style="float:right;padding:6px;color:white">someone@gmail.com<br>mobile: +852 98765432</span>
 
 # Casualwriter  
 
