add avatar with some revision

--- a/document.html
+++ b/document.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<title>Document</title>
+<title>Resume</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.css">
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
-  body { font-family:Arial; line-height:1.5; margin:auto; max-width:1024px; display:none; color:#232 }
-  h1  { font-size:220%; padding:12px; border:1px solid lightgrey; background:RoyalBlue; color:white  }
-  h2  { border-bottom:1px solid grey; padding:6px; color:teal }  
+  body { font-family:Consolas,arial; line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none;  }
+  h1  { font-size:200%; padding:12px; border:1px solid grey; background:PowderBlue; }
+  h2  { border-bottom:1px solid grey; padding:6px; }  
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
+
+<image style="float:right;border-radius:50%;width:60px;padding:6px" src="avatar-man.jpg">
 <span style="float:right;padding:6px">someone@gmail.com<br>by casualwriter</span>
 
 # casual-markdown-page
