--- a/project-plan.html
+++ b/project-plan.html
@@ -4,12 +4,14 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.css">
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
-  body { font-family:Verdana,sans-serif; line-height:1.5; margin:auto; max-width:1024px; display:none}
-  h1  { font-size:200%; padding:12px; border:1px solid lightgrey; background:#f0f0f0;  }
-  h2  { border-bottom:1px solid grey; padding:6px; }
+  body { font-family:arial; line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; }
+  h1  { font-size:180%; padding:12px; border:1px solid lightgrey; background:Salmon; color:white  }
+  h2  { border-bottom:1px solid grey; padding:6px; color:teal }  
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
-<span style="float:right;padding:6px">someone@gmail.com<br>by casualwriter</span>
+
+<image style="float:right;border-radius:40%;width:60px;padding:6px" src="avatar-woman.jpg">
+<span style="float:right;padding:6px;">Presented on 2022/09/06<br>by casualwriter</span>
 
 # Inventory Management System
 
