--- a/resume-warm.html
+++ b/resume-warm.html
@@ -4,9 +4,9 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.css">
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
-  body { font-family:Calibri,Arial; line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; color:#232 }
+  body { line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; font-family:Calibri,Arial;  }
   h1  { font-size:220%; padding:12px; border:1px solid lightgrey; background:#a05; color:white }
-  h2  { border-bottom:1px solid grey; padding:6px; color:purple}  
+  h2  { border-bottom:1px solid grey; color:purple}  
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
 
