--- a/project-plan.html
+++ b/project-plan.html
@@ -5,13 +5,13 @@
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
   body { font-family:arial; line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; }
-  h1  { font-size:180%; padding:12px; border:1px solid lightgrey; background:Salmon; color:white  }
-  h2  { border-bottom:1px solid grey; padding:6px; color:teal }  
+  h1  { font-size:180%; padding:12px; border:1px solid lightgrey; background:Purple; color:white  }
+  h2  { border-bottom:1px solid grey; padding:2px; color:MediumPurple }  
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
 
-<image style="float:right;border-radius:40%;width:60px;padding:6px" src="avatar-woman.jpg">
-<span style="float:right;padding:6px;">Presented on 2022/09/06<br>by casualwriter</span>
+<image style="float:right;border-radius:50%;width:60px;padding:6px" src="avatar-woman.jpg">
+<span style="float:right;padding:6px;color:lightgrey">Presented on 2022/09/06<br>by casualwriter</span>
 
 # Inventory Management System
 
