--- a/resume-blue.html
+++ b/resume-blue.html
@@ -5,64 +5,53 @@
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
   body { font-family:arial; line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; }
-  h1  { font-size:220%; padding:12px; border:1px solid lightgrey; background:RoyalBlue; color:white  }
-  h2  { border-bottom:1px solid grey; padding:6px; color:teal }  
+  h1  { font-size:220%; padding:12px; border:1px solid lightgrey; background:SteelBlue; color:white  }
+  h2  { border-bottom:1px solid grey; padding:2px; color:teal }  
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
 
-<image style="float:right;border-radius:40%;width:60px;padding:6px" src="avatar-man.jpg">
+<image style="float:right;border-radius:50%;width:56px;padding:6px" src="avatar-man.jpg" />
 <span style="float:right;padding:6px;color:white"> someone@gmail.com <br> mobile: +852 98765432 </span>
 
 # Casualwriter  
 
-## Education
-
-* The Chinese University of Hong Kong (2000 - 2004)
-* Bachelor of Computer Science (Sep 2004)
-
-## Highlight
+## Executive Summary
 
 * 10 years project/team management experience
 * PMP, OCP, AWS Certification
 * Hand-on experience in oracle database
 * Proficient in JavaScript, Java, Powerbuilder
-* Familar cloud solution
+* Familiar cloud solution
 
 ## Working Experience
 
-#### PingShan Technology Company Ltd. (2015/08 - present) 
+#### PingShan Technology Company Ltd. (Project Manager, 2015/08 - present) 
 
-* Project Manager
-* Lead a  team for IT development and operation
+* Lead team of 10 to oversee conception, requirement gathering, documentation and rollout.
+* Conduct troubleshooting, analysis and support. Gather user feedback, document bugs and change requests.
 * Projects: [Casual-markdown](https://github.com/casualwriter/casual-markdown), [Casual-markdown-cv](https://github.com/casualwriter/casual-markdown-cv)
 
-#### Second Company (2011/06 - 2015/07) 
+#### Second Company (System Analyst, 2011/06 - 2015/07) 
 
-* Senior System Analyst
-* Lead a small team for application development
+* Led team of 5 for application development
+* Coordinated with developers, support staff and vendors across Hong Kong, China, Taiwan
 * Projects: [Powerpage](https://github.com/casualwriter/powerpage), [Power-Web-Crawler](https://github.com/casualwriter/powerpage-web-crawler)
 
-#### My first Company (2005/01 - 2011/05)
+#### My first Company (Analyst Programmer, 2005/01 - 2011/05)
 
-* Analyst Programmer -> System Analyst
-* Tech-Stack: Javascript, Java, PHP, Powerbuilder, Oracle
-* Projects: Inventory system, CRM, MIS
+* develop multiple applications using Javascript, Java, PHP, Powerbuilder, Oracle
+* Projects: Inventory System, CRM, MIS
 
-## Certification
+## Education & Qualifications
 
-* 2021/12: AWS Certification
-* 2020/02: OCP (Oracle Certified Professional)
-* 2018/08: PMP (Project Management Professional)
+* AWS Certification (2021/12)
+* Oracle Certified Professional (2020/02)
+* Project Management Professional (PMP) (2018/10)
+* Bachelor of Computer Science (Sep 2004)
+* The Chinese University of Hong Kong (2000 - 2004)
 
-## Languages (optional)
+## Misc. Information
 
-* English - good
-* Mandarin - good
-* Cantonese - fluent/native
-
-## Personal Info (optional)
-
-* Birth: yyyy/mm
-* Gender: Male
-* Address: Room 1203, 8/F, Block A, One building, Hong Kong
-* Interests: Hiking, Jogging, Reading
+* Nationality: Chinese
+* Languages: English (good), Cantonese (fluent/native), Mandarin (good)
+* Availability: 1 month's notice
