--- a/resume-warm.html
+++ b/resume-warm.html
@@ -5,13 +5,15 @@
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
   body { line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; font-family:Calibri,Arial;  }
-  h1  { font-size:220%; padding:12px; border:1px solid lightgrey; background:#a05; color:white }
+  h1  { font-size:220%; padding:16px; border:1px solid lightgrey; background:#a05; color:white }
   h2  { border-bottom:1px solid grey; color:purple}  
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
 
-<image style="float:right;border-radius:50%;width:56px;padding:6px" src="avatar-woman.jpg" />
-<span style="float:right;padding:6px;color:white"> someone@gmail.com <br> mobile: +852 98765432 </span>
+<image style="float:right;border-radius:50%;width:70px;padding:6px" src="avatar-woman.jpg" />
+<span style="float:right;padding:6px;color:white"> 
+  someone@gmail.com <br> mobile: +852 98765432 <br> Nationality: Chinese
+</span>
 
 # Casualwriter  
 
@@ -52,6 +54,5 @@
 
 ## Misc. Information
 
-* Nationality: Chinese
-* Languages: English (good), Cantonese (fluent/native), Mandarin (good)
+* Languages: English (good), Cantonese (native), Mandarin (fluent)
 * Availability: 1 month's notice
