--- a/resume-blue.html
+++ b/resume-blue.html
@@ -5,13 +5,15 @@
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
   body { font-family:arial; line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; }
-  h1  { font-size:220%; padding:12px; border:1px solid lightgrey; background:SteelBlue; color:white  }
+  h1  { font-size:220%; padding:16px; border:1px solid lightgrey; background:SteelBlue; color:white  }
   h2  { border-bottom:1px solid grey; padding:2px; color:teal }  
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
 
-<image style="float:right;border-radius:50%;width:56px;padding:6px" src="avatar-man.jpg" />
-<span style="float:right;padding:6px;color:white"> someone@gmail.com <br> mobile: +852 98765432 </span>
+<image style="float:right;border-radius:50%;width:70px;padding:6px" src="avatar-man.jpg" />
+<span style="float:right;padding:6px;color:white"> 
+  someone@gmail.com <br> mobile: +852 98765432 <br> Nationality: Hong Konger
+</span>
 
 # Casualwriter  
 
@@ -25,19 +27,19 @@
 
 ## Working Experience
 
-#### PingShan Technology Company Ltd. (Project Manager, 2015/08 - present) 
+#### Project Manager, 2015/08 - present (PingShan Technology Company Ltd.)
 
 * Lead team of 10 to oversee conception, requirement gathering, documentation and rollout.
 * Conduct troubleshooting, analysis and support. Gather user feedback, document bugs and change requests.
 * Projects: [Casual-markdown](https://github.com/casualwriter/casual-markdown), [Casual-markdown-cv](https://github.com/casualwriter/casual-markdown-cv)
 
-#### Second Company (System Analyst, 2011/06 - 2015/07) 
+#### System Analyst, 2011/06 - 2015/07 (Second Company)
 
 * Led team of 5 for application development
 * Coordinated with developers, support staff and vendors across Hong Kong, China, Taiwan
 * Projects: [Powerpage](https://github.com/casualwriter/powerpage), [Power-Web-Crawler](https://github.com/casualwriter/powerpage-web-crawler)
 
-#### My first Company (Analyst Programmer, 2005/01 - 2011/05)
+#### Analyst Programmer, 2005/01 - 2011/05 (My first Company)
 
 * develop multiple applications using Javascript, Java, PHP, Powerbuilder, Oracle
 * Projects: Inventory System, CRM, MIS
@@ -52,6 +54,5 @@
 
 ## Misc. Information
 
-* Nationality: Chinese
 * Languages: English (good), Cantonese (fluent/native), Mandarin (good)
 * Availability: 1 month's notice
