--- a/resume-dark.html
+++ b/resume-dark.html
@@ -5,14 +5,16 @@
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
   body { font-family:Consolas,arial; line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; background:#222; color:Silver }
-  h1  { font-size:200%; padding:12px; border:1px solid grey; background:#666; }
+  h1  { font-size:200%; padding:16px; border:1px solid grey; background:#666; }
   h2  { border-bottom:1px solid grey; padding:2px; }  
   a  { color: #eee }
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
 
-<image style="float:right;border-radius:50%;width:56px;padding:6px" src="avatar-man.jpg" />
-<span style="float:right;padding:6px"> someone@gmail.com <br> mobile: +852 98765432 </span>
+<image style="float:right;border-radius:50%;width:70px;padding:6px" src="avatar-man.jpg" />
+<span style="float:right;padding:6px"> 
+  someone@gmail.com <br> mobile: +852 98765432 <br> Nationality: Hong Konger
+</span>
 
 # Casualwriter  
 
@@ -53,6 +55,5 @@
 
 ## Misc. Information
 
-* Nationality: Chinese
 * Languages: English (good), Cantonese (fluent/native), Mandarin (good)
 * Availability: 1 month's notice
