--- a/resume.html
+++ b/resume.html
@@ -5,13 +5,15 @@
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
   body { font-family:verdana,arial; line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none}
-  h1  { font-size:200%; padding:12px; border:1px solid lightgrey; background:#f0f0f0;  }
+  h1  { font-size:200%; padding:16px; border:1px solid lightgrey; background:#f0f0f0;  }
   h2  { border-bottom:1px solid grey; padding:2px }
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
 
-<image style="float:right;border-radius:50%;width:56px;padding:6px" src="avatar-man.jpg" />
-<span style="float:right;padding:6px"> someone@gmail.com <br> mobile: +852 98765432 </span>
+<image style="float:right;border-radius:50%;width:70px;padding:6px" src="avatar-man.jpg" />
+<span style="float:right;padding:6px"> 
+  someone@gmail.com <br> mobile: +852 98765432 <br> Nationality: Chinese 
+</span>
 
 # Casualwriter  
 
