for web developer

--- a/resume-web.html
+++ b/resume-web.html
@@ -10,7 +10,7 @@
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
 
-<image style="float:right;border-radius:50%;width:60px;padding:6px" src="avatar-ckhung.jpg">
+<image style="float:right;border-radius:50%;width:60px;padding:6px" src="avatar-man.jpg">
 <span style="float:right;padding:6px;color:white"> dwebber@email.com <br> mobile: +60 12 XXXX XXXX <br>Nationality: American</span>
 
 # David Webber (Senior Web Developer)
