--- a/project-plan.html
+++ b/project-plan.html
@@ -4,14 +4,16 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.css">
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
-  body { font-family:arial; line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; }
-  h1  { font-size:180%; padding:16px; border:1px solid lightgrey; background:Purple; color:white  }
-  h2  { border-bottom:1px solid grey; padding:2px; color:MediumPurple }  
+  body { line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; FONT-FAMILY:ARIAL; }
+  h1  { font-size:200%; padding:16px; border:1px solid lightgrey; BACKGROUND:PURPLE; COLOR:WHITE }
+  h2  { border-bottom:1px solid grey; padding:2px; COLOR:MEDIUMPURPLE }
 </style>
-<body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
+<body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block';">
+<!--======= COPY ABOVE CODE AS HEADER, THEN FOLLOW WITH CONTENT IN MARKDOWN FORMAT =========-->
 
 <image style="float:right;border-radius:50%;width:70px;padding:6px" src="avatar-woman.jpg">
-<span style="float:right;padding:6px;color:lightgrey">
+
+<span style="float:right;padding:6px;COLOR:LIGHTGREY">
   Presented by IT Dept<br>on 2022/09/06
 </span>
 
