--- a/resume-blue.html
+++ b/resume-blue.html
@@ -4,15 +4,17 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.css">
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
-  body { font-family:arial; line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; }
-  h1  { font-size:220%; padding:16px; border:1px solid lightgrey; background:SteelBlue; color:white  }
-  h2  { border-bottom:1px solid grey; padding:2px; color:teal }  
+  body { line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; FONT-FAMILY:ARIAL; }
+  h1  { font-size:200%; padding:16px; border:1px solid lightgrey; BACKGROUND:STEELBLUE; COLOR:WHITE }
+  h2  { border-bottom:1px solid grey; padding:2px }
 </style>
-<body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
+<body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block';">
+<!--======= COPY ABOVE CODE AS HEADER, THEN FOLLOW WITH RESUME CONTENT IN MARKDOWN FORMAT =========-->
 
-<image style="float:right;border-radius:50%;width:70px;padding:6px" src="avatar-man.jpg" />
-<span style="float:right;padding:6px;color:white"> 
-  someone@gmail.com <br> mobile: +852 98765432 <br> Nationality: Hong Konger
+<img style="float:right;border-radius:50%;width:70px;padding:6px" src="avatar-man.jpg" />
+
+<span style="float:right;padding:6px;COLOR:WHITE"> 
+  someone@email.com <br> mobile: +852 xxxxxxxx <br> Nationality: Chinese
 </span>
 
 # Casualwriter  
@@ -23,26 +25,27 @@
 * PMP, OCP, AWS Certification
 * Hand-on experience in oracle database
 * Proficient in JavaScript, Java, Powerbuilder
-* Familiar cloud solution
 
 ## Working Experience
 
-#### Project Manager, 2015/08 - present (PingShan Technology Company Ltd.)
+#### Current Company (Project Manager, 2015/08 - present) 
 
 * Lead team of 10 to oversee conception, requirement gathering, documentation and rollout.
 * Conduct troubleshooting, analysis and support. Gather user feedback, document bugs and change requests.
-* Projects: [Casual-markdown](https://github.com/casualwriter/casual-markdown), [Casual-markdown-cv](https://github.com/casualwriter/casual-markdown-cv)
 
-#### System Analyst, 2011/06 - 2015/07 (Second Company)
+#### Second Company (System Analyst, 2011/06 - 2015/07) 
 
 * Led team of 5 for application development
 * Coordinated with developers, support staff and vendors across Hong Kong, China, Taiwan
-* Projects: [Powerpage](https://github.com/casualwriter/powerpage), [Power-Web-Crawler](https://github.com/casualwriter/powerpage-web-crawler)
 
-#### Analyst Programmer, 2005/01 - 2011/05 (My first Company)
+#### My first Company (Analyst Programmer, 2005/01 - 2011/05)
 
-* develop multiple applications using Javascript, Java, PHP, Powerbuilder, Oracle
-* Projects: Inventory System, CRM, MIS
+* Develop multiple applications using Javascript, Java, PHP, Powerbuilder, Oracle
+
+## Projects
+
+* [Casual-Markdown](https://github.com/casualwriter/powerpage) - a lightweight markdown parser
+* [Powerpage](https://github.com/casualwriter/powerpage) - a lightweight browser for html applications
 
 ## Education & Qualifications
 
