--- a/resume-dark.html
+++ b/resume-dark.html
@@ -4,16 +4,19 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.css">
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
-  body { font-family:Consolas,arial; line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; background:#222; color:Silver }
-  h1  { font-size:200%; padding:16px; border:1px solid grey; background:#666; }
-  h2  { border-bottom:1px solid grey; padding:2px; }  
-  a  { color: #eee }
+  body { line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; FONT-FAMILY:CONSOLAS,ARIAL; BACKGROUND:#222; COLOR:SILVER}
+  h1  { font-size:200%; padding:16px; border:1px solid lightgrey; BACKGROUND:#666; }
+  h2  { border-bottom:1px solid grey; padding:2px }
 </style>
-<body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'">
+<body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'; 
+              document.getElementById('qrcode').src='https://chart.googleapis.com/chart?cht=qr&chs=177x177&chl='+location.href" >
+<img id=qrcode style="float:right; margin:5px; border:1px solid lightgrey; width:70px" />
+<!--======= COPY ABOVE CODE AS HEADER, THEN FOLLOW WITH RESUME CONTENT IN MARKDOWN FORMAT =========-->
 
-<image style="float:right;border-radius:50%;width:70px;padding:6px" src="avatar-man.jpg" />
+<!--<img style="float:right;border-radius:50%;width:70px;padding:6px" src="avatar-man.jpg" />-->
+
 <span style="float:right;padding:6px"> 
-  someone@gmail.com <br> mobile: +852 98765432 <br> Nationality: Hong Konger
+  someone@email.com <br> mobile: +852 xxxxxxxx <br> Nationality: Chinese
 </span>
 
 # Casualwriter  
@@ -24,26 +27,27 @@
 * PMP, OCP, AWS Certification
 * Hand-on experience in oracle database
 * Proficient in JavaScript, Java, Powerbuilder
-* Familiar cloud solution
 
 ## Working Experience
 
-#### PingShan Technology Company Ltd. (Project Manager, 2015/08 - present) 
+#### Current Company (Project Manager, 2015/08 - present) 
 
 * Lead team of 10 to oversee conception, requirement gathering, documentation and rollout.
 * Conduct troubleshooting, analysis and support. Gather user feedback, document bugs and change requests.
-* Projects: [Casual-markdown](https://github.com/casualwriter/casual-markdown), [Casual-markdown-cv](https://github.com/casualwriter/casual-markdown-cv)
 
 #### Second Company (System Analyst, 2011/06 - 2015/07) 
 
 * Led team of 5 for application development
 * Coordinated with developers, support staff and vendors across Hong Kong, China, Taiwan
-* Projects: [Powerpage](https://github.com/casualwriter/powerpage), [Power-Web-Crawler](https://github.com/casualwriter/powerpage-web-crawler)
 
 #### My first Company (Analyst Programmer, 2005/01 - 2011/05)
 
-* develop multiple applications using Javascript, Java, PHP, Powerbuilder, Oracle
-* Projects: Inventory System, CRM, MIS
+* Develop multiple applications using Javascript, Java, PHP, Powerbuilder, Oracle
+
+## Projects
+
+* [Casual-Markdown](https://github.com/casualwriter/powerpage) - a lightweight markdown parser
+* [Powerpage](https://github.com/casualwriter/powerpage) - a lightweight browser for html applications
 
 ## Education & Qualifications
 
