--- a/resume-qrcode.html
+++ b/resume-qrcode.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.css">
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
-  body { line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; FONT-FAMILY:VERDANA,ARIAL }
+  body { line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; FONT-FAMILY:"Segoe UI",ARIAL }
   h1  { font-size:200%; padding:16px; border:1px solid lightgrey; BACKGROUND:#f0f0f0 }
   h2  { border-bottom:1px solid grey; padding:2px }
 </style>
