--- a/resume-dark.html
+++ b/resume-dark.html
@@ -6,7 +6,7 @@
 <style>  
   body { line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; FONT-FAMILY:CONSOLAS,ARIAL; BACKGROUND:#222; COLOR:SILVER}
   h1  { font-size:200%; padding:16px; border:1px solid lightgrey; BACKGROUND:#666; }
-  h2  { border-bottom:1px solid grey; padding:2px }
+  h2  { border-bottom:1px solid grey; padding:2px } a { color:#eee }
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'; 
               document.getElementById('qrcode').src='https://chart.googleapis.com/chart?cht=qr&chs=177x177&chl='+location.href" >
