--- a/quotation.html
+++ b/quotation.html
@@ -31,22 +31,21 @@ Pingshan Technology<br>on 2023/06/15
 1. Total Price <big>**US$ 6,000**</big>
 1. Include setup fee US$ 3,000 (NOT refundable) 
 1. Include 6 months subscription (6 x USD$500, refundable)
-1. US$ 500 rebate as initial account balance
 1. Charge by usage
 
 ### Service Details
 
 1. **16 accounts** 
 1. Unlimited access of GPT3.5/GPT-4
-1. AI Utilities - Job Analysis / Email Composer / Content Writer
+1. AI Utilities - Email Composer / Content Writer
 1. Email/whatsapp technical support
 1. Monthly usage report
 
 ### Free Service
 
-1. A dedicate main page with company logo
-1. On-site half day tutor (after **one week** of subscription)
-1. On-site half day follow up (after **one month** of subscription)
+1. A dedicate main page with yuor company log and customized information
+1. On-site tutor  (1 day, after **one week** of subscription)
+1. On-site follow up (1 day, after **one month** of subscription)
 
 ## Service Activation
 
@@ -75,5 +74,5 @@ to explorer more opportunity of business alignment and enhancement.
 
 - Whatsapp: +852 91349226
 - Email: mkt@pingshan-tech.com
-- Website: https://pingshan-tech.com/it
+
 
