--- a/resume-qrcode.html
+++ b/resume-qrcode.html
@@ -9,7 +9,7 @@
   h2  { border-bottom:1px solid grey; padding:2px }
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block'; 
-              document.getElementById('qrcode').src='https://qrcode.tec-it.com/API/QRCode?data='+location.href" >
+              document.getElementById('qrcode').src='https://qrcode.tec-it.com/API/QRCode?size=small&dpi=120&data='+location.href" >
 <img id=qrcode style="float:right; margin:5px; border:1px solid lightgrey; width:70px" />
 <!--======= COPY ABOVE CODE AS HEADER, THEN FOLLOW WITH RESUME CONTENT IN MARKDOWN FORMAT =========-->
 
