--- a/resume-blue.html
+++ b/resume-blue.html
@@ -1,61 +1,57 @@
 <!DOCTYPE html>
-<title>Resume</title>
+<title>Резюме</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.css">
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
   body { line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; FONT-FAMILY:ARIAL; }
-  h1  { font-size:200%; padding:16px; border:1px solid lightgrey; BACKGROUND:STEELBLUE; COLOR:WHITE }
+  h1  { font-size:200%; padding:30px; border:1px solid lightgrey; BACKGROUND:STEELBLUE; COLOR:WHITE }
   h2  { border-bottom:1px solid grey; padding:2px; COLOR:STEELBLUE }
+  a   {text-decoration: none; COLOR: STEELBLUE}
+  span a {COLOR: WHITE !important}
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block';">
 <!--======= COPY ABOVE CODE AS HEADER, THEN FOLLOW WITH RESUME CONTENT IN MARKDOWN FORMAT =========-->
 
-<img style="float:right;border-radius:50%;width:70px;padding:6px" src="avatar-man.jpg" />
-
 <span style="float:right;padding:6px;COLOR:WHITE"> 
-  someone@email.com <br> mobile: +852 xxxxxxxx <br> Nationality: Chinese
+  <a href="mailto:timarnd06@gmail.com">timarnd06@gmail.com</a> <br> телефон: +79613322254 <br> telegram: <a href="https://t.me/Funkky_Monk">Funkky_Monk</a> <br> GitHub <a href="https://github.com/Teamofeyy">Teamofeyy</a>
 </span>
 
-# Casualwriter  
+# Марченко Тимофей
 
-## Executive Summary
+## Технические навыки
 
-* 10 years project/team management experience
-* PMP, OCP, AWS Certification
-* Hand-on experience in oracle database
-* Proficient in JavaScript, Java, Powerbuilder
+* Frontend: React, React Native, TailwindCSS, TypeScript, JavaScript  
+* Backend: немного Node.js(Express) и flask
+* Инфраструктура: Docker, Linux, PostgreSQL, MongoDB  
+* Инструменты: Figma, Vite, WebPack  
 
-## Working Experience
+## Опыт работы
 
-#### Current Company (Project Manager, 2015/08 - present) 
+#### IT лабаротория ИУБиП (Мобильный разработчик, фронтенд разработчик, 2024/04 - настоящее время) 
 
-* Lead team of 10 to oversee conception, requirement gathering, documentation and rollout.
-* Conduct troubleshooting, analysis and support. Gather user feedback, document bugs and change requests.
+* В рамках проекта умного дрона для дома (что-то вроде алисы накрыльях) разрабатывал мобильное приложения для управления дроном
+* Разработка приложения заморожена т.к конструкторы дрона не могут его собрать(
+* Приложение сделано на React Native, TS, Tailwind
+* [Репозиторий](https://github.com/Teamofeyy/Drone)
 
-#### Second Company (System Analyst, 2011/06 - 2015/07) 
+## Проекты
 
-* Led team of 5 for application development
-* Coordinated with developers, support staff and vendors across Hong Kong, China, Taiwan
+* [Weather-app](https://github.com/Teamofeyy/Weather-Vue-App) - простой [сайт](https://teamofeyy.github.io/WeatherVue/) на Vue для просмотра текущей погоды
+* [Cookies](https://github.com/Teamofeyy/cookies-angular) - [веб-приложение](https://teamofeyy.github.io/cookies/) на ангулар для заказа печнья
+* [React-portfolio](https://github.com/Teamofeyy/Portfolio-React) - [сайт](https://teamofeyy.github.io/Portfolio/) портфолио для разработчика
+* [Weekly-bot](https://github.com/Teamofeyy/WeeklyBot) - бот на Python для получения задач и их статусов из GitHub Projects
 
-#### My first Company (Analyst Programmer, 2005/01 - 2011/05)
+## Личные качества
 
-* Develop multiple applications using Javascript, Java, PHP, Powerbuilder, Oracle
+* Умею работать в команде и самостоятельно брать ответственность
+* Люблю разбираться в новых технологиях и доводить проекты до результата
+* Не боюсь ошибаться и быстро учусь на практике
 
-## Projects
+## Образование
 
-* [Casual-Markdown](https://github.com/casualwriter/powerpage) - a lightweight markdown parser
-* [Powerpage](https://github.com/casualwriter/powerpage) - a lightweight browser for html applications
+* ЧОУ ВО ИУБиП - Информационные системы и программирование (2022 - Настоящее время, 3 курс)
 
-## Education & Qualifications
+## Дополнительная информация
 
-* AWS Certification (2021/12)
-* Oracle Certified Professional (2020/02)
-* Project Management Professional (PMP) (2018/10)
-* Bachelor of Computer Science (Sep 2004)
-* The Chinese University of Hong Kong (2000 - 2004)
-
-## Misc. Information
-
-* Languages: English (good), Cantonese (fluent/native), Mandarin (good)
-* Availability: 1 month's notice
+* Языки: Английский (B1)
